public/css/style.css
/**************************************/
/*           COLOR SCHEME             */
/**************************************
- black		#000
- white		#fff
-           #
-           #
-           #
***************************************/


/**************************************/
/*              GLOBALS               */
/**************************************/
html,body {
	margin:0;
	height:100%;
}

a[href^="http:"] {
	background-image:none;
	padding-right:0;
}

a[href^="http:"]:visited {
	background-image:none;
}

a:link, a:visited {
	color:DarkRed;
	text-decoration:none;
}

a:hover {
	border-bottom:1px dotted DarkRed;
	padding-bottom:0;
}

/**************************************/
/*              HEADER                */
/**************************************/
#header {
	background:#000;
	color:#FFF;
	margin-bottom:5em;

}

#header .container {
	padding:16px 0 14px;
}

#header h1 {
	margin-top:0;
	font-family:Rockwell,Arial,sans-serif;
	letter-spacing:-2px;
}

#header h1 a {
	color:#FFF;
}

#header h1 a:hover {
	border:none;
	padding-bottom:0.1em;
}

#header p {
	margin-bottom:0;
}

#header p span {
	font-weight:bold;
	font-size:120%;
}

#search {
	margin-top:10px;
}

#search form {
	margin-bottom:0;
}

#search form div {
	float:left;
	margin-bottom:0;
}

#query {
	border:1px solid #444;
	background:url("../images/icons/magnifier.png") no-repeat 3px 3px #FFF;
	font-family:"Liberation Sans",Helvetica,Arial,sans-serif;
	font-size:12px;
	width:242px;
	padding:5px 1.4px 3.8px 24px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}

#query.blur {
	color:#AAA;
}

#query:focus {
	outline:0;
}

/**************************************/
/*             NAVIGATION             */
/**************************************/
#primary-nav {
	margin-left:0;}

#primary-nav li {
	display:inline;
}

#primary-nav li:first-child {
	margin-left:0;
}


/**************************************/
/*            MAIN CONTENT            */
/**************************************/
#container {
	position:relative;
	height:auto !important;
	height:100%;
	min-height:100%;
}

#content {
	padding-bottom:4em;
}

div.module {
	border-bottom:1px dotted #DDD;
	margin-bottom:1.2em;
	padding-bottom:0.5em;
}

.module h2 {
	color:#CCC;
	margin-bottom:.15em;
	margin-top:0;
}

.module h2 .username {
	font-size:75%;
}

.bubble {
	-webkit-border-radius: 6px;
	-moz-border-radius: 6px;
	border-radius: 6px;
	background:#EEE;
	margin-right:4px;
	text-align:center;
	padding:10px 0 5px 0;
}

.bubble span {
	display:block;
	font-size:140%;
	font-weight:bold;
}

#sidebar > div h3 {
	margin-top:0;
	margin-right:8px;
}

#sidebar > div h3 + div {
	line-height:0;
}

#sidebar .name {
	font-weight:bold;
}

#modules>div:last-of-type {
	margin-bottom:5em;
}

p.pagination {
	text-align:center;
}

p.pagination a {
	text-decoration:none;
	background:#EEE;
	border:1px solid #DDD;
	padding:3px 6px;
	-moz-border-radius:3px;
}

.pagination strong {
	padding:3px 6px;
	font-weight:bolder;
}

.pagination .prev {
	margin-right:20px;
}

.pagination .next {
	margin-left:20px;
}

#main {
	margin-bottom:3em;
}

#main h2 {
	margin-top:0;
}

.developer-info {
	margin-bottom:3em;
}

h3.module-heading {
	margin-bottom:1em;
	color:#888;
}

h3.module-heading span {
	color:#000;
	font-size:120%;
}

#sidebar ol {
	color:#BBB;
	list-style-type:none;
	margin-left:0;
}

#sidebar ol li {
	border-bottom:1px dotted #DDD;
	margin-bottom:.6em;
}

#sidebar > div {
	margin-bottom:4em;
}

#subscribe-links {
	list-style-type:none;
	margin-left:0;
}

#subscribe-links li {
	margin-left:0;
	background-repeat:no-repeat;
	margin-bottom:.6em;
}

#subscribe-links a {
	padding-left:20px;
}

#subscribe-links .twitter {
	background-image:url('/images/icons/twitter.png');
}

#subscribe-links .feed {
	background-image:url('/images/icons/feed.png');
}

div.links a {
	margin-right:20px;
	padding-left:20px;
	background-repeat:no-repeat;
	background-position:left top;
}

div.links a.github {
	background-image:url('/images/icons/octocat.png');
}

div.links a.homepage {
	background-image:url('/images/icons/house.png');
}

div.links a.issues {
	background-image:url('/images/icons/bug.png');
}

div.links a.wiki {
	background-image:url('/images/icons/book_open.png');
}

/**************************************/
/*               FOOTER               */
/**************************************/
#primary-nav {
	float:left;
}

#footnote {
	float:right;
	text-align:right;
}

#footer {
	background:#F2F2F2;
	margin:0 auto;
	position:absolute;
	bottom:0;
	width:100%;
}

#footer .container {
	padding:20px 20px 0;
}

#footer a {
	font-weight:bold;
}

